# praborrow-diplomacy

./: Cargo.toml  README.md  README_ID.md  cbindgen.toml
src/: lib.rs  safe.rs
