[package]
name = "praborrow-diplomacy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FFI bindings for cross-language integration with the Sovereign memory model."
keywords = ["ffi", "interop", "c-api", "bindings"]
categories = ["api-bindings", "external-ffi-bindings"]

[dependencies]
tracing = "0.1"

